@@ -3,6 +3,9 @@
 	* libfreeipmi/fiid/fiid.c: Put index into fiid_field_data so does
 	not have to be calculated later.
 
+	* libfreeipmi/fiid/fiid.c: Put start & end bytes into
+	fiid_field_data so does not have to be calculated later.
+
 2016-09-30 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/fiid/fiid.c (_fiid_template_check_valid_keys):
